api completed and tested